# Loysuvoq-beton

./: .gitignore  README.md  main.py  pyproject.toml
apps/: model.py
apps/blog/: __init__.py  admin.py  models.py  urls.py  views.py
apps/blog/apis/: __init__.py  serializers.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_alter_post_category_alter_post_content.py
apps/common/: admin.py  apps.py  models.py
apps/common/apis/: __init__.py  serializers.py  views.py
apps/common/migrations/: 0001_initial.py
apps/estate/: admin.py  choices.py  forms.py  models.py  urls.py  views.py
apps/estate/migrations/: 0001_initial.py  0002_alter_estate_images.py  0003_rename_curreny_estate_currency_estate_is_active.py  0004_rename_fasebook_estateagent_facebook_and_more.py  0005_remove_estateagent_avatar_estateagent_images.py  0006_estateagentcomment_stars_count.py  0007_estate_slug.py  0008_remove_estateagent_images_estateagent_avatar.py
core/: settings.py  urls.py  utils.py
template/: about.html  agent-single.html  agents-grid.html  blog-grid.html  blog-single.html  contact.html
template/estate/: index.html  property-grid.html  property-single.html
